fix external link arrow spacing/underline

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -773,8 +773,7 @@ button.mobile-menu-button {
 }
 
 .forum-link::after {
-    content: '\279A';
-    margin-inline-start: 0.25rem;
+    content: ' \279A';
     font-size: 14px;
     font-family: 'Overpass Mono', monospace;
 }
